# cpp-harfbuzz

./: CMakeLists.txt
cmake/Modules/: FindCairo.cmake  FindCairomm.cmake  FindCppFontConfig.cmake  FindHarfbuzz.cmake
docs/pages/: mainpage.h
include/: CMakeLists.txt
include/cppharfbuzz/: Blob.h  Buffer.h  Direction.h  Face.h  Feature.h  Font.h  GlyphExtents.h  GlyphInfo.h  GlyphPosition.h  Handle.h  Language.h  Object.h  Script.h  Tag.h  UserData.h  common.h  shape.h
src/: Blob.cpp  Buffer.cpp  CMakeLists.txt  Direction.cpp  Face.cpp  Feature.cpp  Font.cpp  GlyphExtents.cpp  GlyphInfo.cpp  GlyphPosition.cpp  Handle.cpp  Language.cpp  Object.cpp  Script.cpp  Tag.cpp  UserData.cpp  UserData_Impl.h  shape.cpp
test/tutorial/: CMakeLists.txt  CairoOutput.cpp  CairoOutput.h  CommandLine.cpp  CommandLine.h  FontReader.cpp  FontReader.h  InputReader.cpp  InputReader.h  Shaper.cpp  Shaper.h  main.cpp
